--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="/dist/bundle.js"></script>
+    <script src="/mid-century-homes/dist/bundle.js"></script>
   </body>
 </html>
